<resources>
    <string name="app_name">Spotify Clone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>All Songs</item>
        <item>Playlists</item>
        <item>Add Song</item>
        <item>Settings</item>
    </string-array>

    <!--Hints for adding songs-->
    <string name="stringSongTitle">Title</string>
    <string name="StringArtist">Artist</string>
    <string name="StringSongType">Genre</string>
    <string name="StringSongLink">Youtube Link</string>
    <string name="StringAddSong">Add Song</string>

    <!--String for home buttons-->
    <string name="string_all_songs">All Songs</string>
    <string name="string_playlists">Playlists</string>
    <string name="nav_settings">Settings</string>
    <string name="string_delete_all">Delete all songs from database</string>
    <string name="default_title">Default Title</string>
    <string name="default_artist">Default Artist</string>
    <string name="default_genre">Default Genre</string>
    <string name="darkmode_lightmode">DarkMode/LightMode</string>

    <string name="StringPrevSong">Previous Song</string>
    <string name="stringPauseSong">Pause Song</string>
    <string name="stringNextSong">Next Song</string>
    <string name="stringModifySong">Modify Song</string>
    <string name="stringAddToPlaylist">Add to Playlist</string>
    <string name="stringDeleteSong">Delete Song</string>
    <string name="change_details">Change Details</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="change_name">Change name</string>
    <string name="deleteplaylist">deletePlaylist</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="strdefault">Default</string>
</resources>