<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/btnAllSongsActivity"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="0.5"
            android:background="@drawable/baseline_library_music_24"
            android:contentDescription="@string/string_all_songs"
            android:minHeight="150dp"
            tools:ignore="SpeakableTextPresentCheck"
            app:tint="#A84242" />

        <ImageButton
            android:id="@+id/btnPlaylistsActivity"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="0.5"
            android:background="@drawable/baseline_playlist_play_24"
            android:contentDescription="@string/string_playlists"
            android:minHeight="150dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnAddSongActivity"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="0.5"
            android:background="@drawable/baseline_add_circle_24"
            android:contentDescription="@string/StringAddSong"
            android:minHeight="150dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btnSettingsActivity"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="0.5"
            android:background="@drawable/baseline_settings_24"
            android:contentDescription="@string/nav_settings"
            android:minHeight="150dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>
</LinearLayout>