<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongPlayListActivity"
    android:background="@color/darkRed"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/inpNewPlaylistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/playlist_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#BC9191" />

        <Button
            android:id="@+id/btnModPlaylistName"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkOrange"
            android:text="@string/change_name"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

        <ImageButton
            android:id="@+id/btnDeletePlaylist"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:background="@drawable/baseline_delete_outline_24"
            android:contentDescription="@string/deleteplaylist"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <ListView
        android:id="@+id/viewAllSongsPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>