<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkSalmon"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtGenericTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_title"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:minHeight="35dp"
                android:textColor="@color/white"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/txtGenericArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_artist"
                android:layout_marginStart="40dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/txtGenericGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_genre"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>